--- a/src/android/layout/chooseimage_main.xml
+++ b/src/android/layout/chooseimage_main.xml
@@ -67,7 +67,8 @@
             android:layout_toRightOf="@+id/id_choose_dir"
             android:layout_alignBottom="@+id/id_choose_dir"
             android:paddingLeft="2dip"
-            android:src="@drawable/jiaobiao" />
+            android:src="@drawable/jiaobiao"
+            android:margin_bottom="3dp"/>
     <TextView
       android:id="@+id/id_total_count"
       android:layout_width="50dip"
