--- a/src/android/layout/chooseimage_main.xml
+++ b/src/android/layout/chooseimage_main.xml
@@ -67,7 +67,7 @@
             android:layout_toRightOf="@+id/id_choose_dir"
             android:paddingLeft="2dip"
             android:src="@drawable/jiaobiao"
-            android:layout_marginBottom="3dp"/>
+            android:layout_marginTop="5dp"/>
     <TextView
       android:id="@+id/id_total_count"
       android:layout_width="50dip"
