--- a/src/android/layout/chooseimage_main.xml
+++ b/src/android/layout/chooseimage_main.xml
@@ -18,6 +18,17 @@
             android:layout_marginTop="1dip"
             android:background="@drawable/array_left"
             android:layout_marginLeft="10dip"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#fff"
+            android:text="选择照片"
+            android:paddingTop="8dip"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+
+
     <TextView
             android:id="@+id/tv_ok"
             android:layout_width="wrap_content"
