--- a/src/android/layout/list_dir_item.xml
+++ b/src/android/layout/list_dir_item.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/id_dir_item_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="left"
                 android:text="4723张"
                 android:textColor="#444"
                 android:textSize="12sp" />
