--- a/src/android/layout/chooseimage_main.xml
+++ b/src/android/layout/chooseimage_main.xml
@@ -1,89 +1,104 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-  <RelativeLayout
-          android:id="@+id/id_top_ly"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_alignParentTop="true"
-          android:background="#e0000000"
-          android:paddingTop="10dip"
-          android:clickable="true" >
-    <TextView
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:background="#ffffff"
+    android:layout_height="match_parent" >
+
+    <RelativeLayout
+        android:id="@+id/id_top_ly"
+        android:layout_width="match_parent"
+        android:layout_height="40dip"
+        android:layout_alignParentTop="true"
+        android:background="#454545"
+        android:clickable="true"
+        android:paddingTop="5dip" >
+
+        <TextView
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:layout_marginTop="1dip"
+            android:layout_marginLeft="10dip"
+            android:layout_marginTop="3dip"
             android:background="@drawable/array_left"
-            android:layout_marginLeft="10dip"/>
+            android:textColor="#fff" />
 
-    <TextView
+        <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:text="选择照片"
-            android:paddingTop="8dip"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:paddingTop="0dip"
+            android:text="选择照片"
+            android:textColor="#fff" />
 
-
-    <TextView
+        <Button
             android:id="@+id/tv_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:layout_marginTop="3dip"
-            android:paddingBottom="3dip"
-            android:paddingLeft="2dip"
-            android:paddingRight="2dip"
-            android:text="确定"
-            android:background="#ffe462"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dip" />
-  </RelativeLayout>
+            android:layout_marginRight="10dip"
+            android:layout_marginTop="4dip"
+            android:background="@drawable/shape_corner"
+            android:paddingBottom="3dip"
+            android:paddingLeft="4dip"
+            android:paddingRight="4dip"
+            android:text="确定"
+            android:textColor="#000" />
+    </RelativeLayout>
 
-  <GridView
-          android:id="@+id/id_gridView"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_marginTop="50dip"
-          android:cacheColorHint="@android:color/transparent"
-          android:clipChildren="true"
-          android:gravity="center"
-          android:horizontalSpacing="3dip"
-          android:listSelector="@android:color/transparent"
-          android:numColumns="3"
-          android:stretchMode="columnWidth"
-          android:verticalSpacing="3dip" >
-  </GridView>
+    <GridView
+        android:id="@+id/id_gridView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dip"
+        android:cacheColorHint="@android:color/transparent"
+        android:clipChildren="true"
+        android:gravity="center"
+        android:horizontalSpacing="3dip"
+        android:listSelector="@android:color/transparent"
+        android:numColumns="4"
+        android:stretchMode="columnWidth"
+        android:layout_marginBottom="40dip"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:background="#ffffff"
+        android:verticalSpacing="3dip" >
+    </GridView>
 
-  <RelativeLayout
-          android:id="@+id/id_bottom_ly"
-          android:layout_width="match_parent"
-          android:layout_height="50dip"
-          android:layout_alignParentBottom="true"
-          android:background="#e0000000"
-          android:clickable="true" >
+    <RelativeLayout
+        android:id="@+id/id_bottom_ly"
+        android:layout_width="match_parent"
+        android:layout_height="40dip"
+        android:layout_alignParentBottom="true"
+        android:background="#454545"
+        android:clickable="true" >
 
-    <TextView
+        <TextView
             android:id="@+id/id_choose_dir"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
+            android:text="切换相册"
             android:paddingLeft="10dip"
             android:textColor="@android:color/white" />
-    <ImageView
+		<RelativeLayout 
+		    android:id="@+id/rl_choose_dir"
+		    android:layout_height="40dip"
+		    android:layout_width="100dip"
+		    android:layout_alignParentLeft="true"
+		    ></RelativeLayout>
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
             android:layout_toRightOf="@+id/id_choose_dir"
             android:paddingLeft="2dip"
-            android:src="@drawable/jiaobiao"
-            android:layout_marginTop="25dp"/>
-    <TextView
+            android:src="@drawable/jiaobiao" />
+
+        <TextView
             android:id="@+id/id_total_count"
             android:layout_width="50dip"
             android:layout_height="match_parent"
@@ -92,6 +107,13 @@
             android:layout_marginRight="10dip"
             android:gravity="center"
             android:textColor="@android:color/white" />
-  </RelativeLayout>
+        <RelativeLayout 
+		    android:id="@+id/rl_total_count"
+		    android:layout_height="40dip"
+		    android:layout_width="60dip"
+		    android:layout_alignParentRight="true"
+		    ></RelativeLayout>
+        
+    </RelativeLayout>
 
 </RelativeLayout>
