--- a/src/android/layout/chooseimage_yulan.xml
+++ b/src/android/layout/chooseimage_yulan.xml
@@ -11,23 +11,33 @@
             android:layout_alignParentTop="true"
             android:background="#ffffff"
             android:clickable="true" >
+        <RelativeLayout 
+            android:id="@+id/rl_back"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+			android:layout_alignParentLeft="true" />
         <TextView
                 android:id="@+id/tv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:textColor="#fff"
-
                 android:layout_marginTop="10dip"
                 android:background="@drawable/picture_folder_arrow2"
                 android:layout_marginLeft="10dip"/>
+          <RelativeLayout 
+            android:id="@+id/rl_delete"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+			android:layout_alignParentRight="true" />
         <TextView
                 android:id="@+id/tv_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:textColor="#000"
                 android:layout_centerVertical="true"
                 android:paddingLeft="2dip"
                 android:paddingRight="2dip"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/preview_delete"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dip" />
