--- a/src/android/layout/grid_item.xml
+++ b/src/android/layout/grid_item.xml
@@ -7,7 +7,7 @@
             android:id="@+id/id_item_image"
             android:layout_width="fill_parent"
             android:layout_height="100dp"
-            android:background="@drawable/pictures_no"
+
             android:scaleType="centerCrop" />
 
     <ImageButton
@@ -21,6 +21,18 @@
             android:background="@null"
             android:src="@drawable/pictures_selected" />
 
+      <TextView
+            android:id="@+id/tv_item_select"
+            android:clickable="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="3dp"
+            android:textColor="#000"
+            
+            android:background="@null"
+            android:src="@drawable/pictures_selected" />
     <ImageButton
             android:id="@+id/id_item_ar"
             android:clickable="false"
