--- a/src/android/layout/chooseimage_yulan.xml
+++ b/src/android/layout/chooseimage_yulan.xml
@@ -11,11 +11,11 @@
             android:layout_alignParentTop="true"
             android:background="#ffffff"
             android:clickable="true" >
-        <RelativeLayout 
-            android:id="@+id/rl_back"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-			android:layout_alignParentLeft="true" />
+        <RelativeLayout
+                android:id="@+id/rl_back"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true" />
         <TextView
                 android:id="@+id/tv_back"
                 android:layout_width="20dp"
@@ -24,11 +24,11 @@
                 android:layout_marginTop="10dip"
                 android:background="@drawable/picture_folder_arrow2"
                 android:layout_marginLeft="10dip"/>
-          <RelativeLayout 
-            android:id="@+id/rl_delete"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-			android:layout_alignParentRight="true" />
+        <RelativeLayout
+                android:id="@+id/rl_delete"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true" />
         <TextView
                 android:id="@+id/tv_delete"
                 android:layout_width="25dp"
@@ -41,7 +41,16 @@
                 android:background="@drawable/preview_delete"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dip" />
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="#45454545"
+                android:layout_alignParentBottom="true"
+
+        ></RelativeLayout>
     </RelativeLayout>
+
+
 
     <ViewFlipper
             android:id="@+id/viewflipper"
