--- a/src/android/layout/grid_item.xml
+++ b/src/android/layout/grid_item.xml
@@ -21,16 +21,16 @@
             android:background="@null"
             android:src="@drawable/pictures_selected" />
 
-      <TextView
+    <TextView
             android:id="@+id/tv_item_select"
             android:clickable="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="11dp"
+            android:layout_marginTop="2dp"
             android:textColor="#000"
-            
             android:background="@null"
             android:src="@drawable/pictures_selected" />
     <ImageButton
