--- a/src/android/layout/chooseimage_yulan.xml
+++ b/src/android/layout/chooseimage_yulan.xml
@@ -36,11 +36,24 @@
                 android:textColor="#000"
                 android:layout_centerVertical="true"
                 android:paddingLeft="2dip"
-                android:paddingRight="2dip"
+                android:paddingRight="5dip"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/preview_delete"
+                android:layout_toLeftOf="@+id/tv_delete_tv"
+                android:layout_marginRight="5dip" />
+        <TextView
+                android:id="@+id/tv_delete_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_centerVertical="true"
+                android:paddingLeft="2dip"
+                android:paddingRight="2dip"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="10dip" />
+                android:text="删除"
+        />
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="1px"
