预览功能研发完成

--- a/src/android/layout/chooseimage_main.xml
+++ b/src/android/layout/chooseimage_main.xml
@@ -10,15 +10,14 @@
             android:layout_height="40dip"
             android:layout_alignParentTop="true"
             android:background="#454545"
-            android:clickable="true"
-            android:paddingTop="5dip" >
+            android:clickable="true" >
 
         <TextView
                 android:id="@+id/tv_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
-                android:layout_marginTop="3dip"
+                android:layout_marginTop="8dip"
                 android:background="@drawable/array_left"
                 android:textColor="#fff" />
 
@@ -35,15 +34,16 @@
         <Button
                 android:id="@+id/tv_ok"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="10dip"
-                android:layout_marginTop="4dip"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/shape_corner"
-                android:paddingBottom="3dip"
-                android:paddingLeft="4dip"
-                android:paddingRight="4dip"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="7dp"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
                 android:text="确定"
+                android:textSize="17dp"
                 android:textColor="#000" />
     </RelativeLayout>
 
