--- a/src/android/layout/grid_item.xml
+++ b/src/android/layout/grid_item.xml
@@ -7,7 +7,6 @@
             android:id="@+id/id_item_image"
             android:layout_width="fill_parent"
             android:layout_height="100dp"
-
             android:scaleType="centerCrop" />
 
     <ImageButton
@@ -44,5 +43,13 @@
             android:layout_marginTop="3dp"
             android:background="@null"
     />
+    
+    <RelativeLayout 
+        android:id="@+id/rl_check_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        ></RelativeLayout>
 
 </RelativeLayout>
