--- a/src/android/layout/chooseimage_main.xml
+++ b/src/android/layout/chooseimage_main.xml
@@ -2,108 +2,111 @@
 	android:layout_width="match_parent"
 	android:background="#ffffff"
 	android:layout_height="match_parent" >
+
 	<RelativeLayout
 		android:id="@+id/id_top_ly"
 		android:layout_width="match_parent"
-		android:layout_height="40dip"
+		android:layout_height="50dp"
+		android:layout_alignParentStart="true"
 		android:layout_alignParentTop="true"
-		android:background="#454545"
-		android:clickable="true" >
+		android:background="#414141"
+		android:clickable="true"
+		android:layout_alignParentLeft="true">
+
 		<TextView
 			android:id="@+id/tv_back"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_width="20dp"
+			android:layout_height="20dp"
 			android:layout_marginLeft="10dip"
-			android:layout_marginTop="8dip"
-			android:background="@drawable/array_left"
+			android:layout_marginTop="15dip"
+			android:background="@drawable/close_white"
 			android:textColor="#fff" />
-		<TextView
-			android:id="@+id/tv_title"
+
+		<RelativeLayout
+			android:id="@+id/rl_choose_dir"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_height="50dp"
 			android:layout_centerHorizontal="true"
 			android:layout_centerVertical="true"
-			android:paddingTop="0dip"
-			android:text="选择照片"
-			android:textColor="#fff" />
-		<Button
-			android:id="@+id/tv_ok"
-			android:layout_width="wrap_content"
-			android:layout_height="match_parent"
-			android:layout_alignParentRight="true"
-			android:layout_marginRight="10dp"
-			android:background="@drawable/shape_corner"
-			android:layout_marginTop="7dp"
-			android:layout_marginBottom="7dp"
-			android:paddingLeft="6dp"
-			android:paddingRight="6dp"
-			android:text="确定"
-			android:textSize="17dp"
-			android:textColor="#000" />
+			android:gravity="center"
+			android:paddingLeft="10dp"
+			android:paddingRight="10dp">
+
+			<TextView
+				android:id="@+id/tv_title"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerInParent="true"
+				android:text="选择照片"
+				android:textColor="#fff"
+				android:textSize="16sp"/>
+
+			<ImageView
+				android:layout_width="30dp"
+				android:layout_height="18dp"
+				android:layout_centerVertical="true"
+				android:layout_toEndOf="@+id/tv_title"
+				android:src="@drawable/down_white"
+				android:layout_toRightOf="@+id/tv_title"
+				android:layout_marginLeft="5dp"/>
+		</RelativeLayout>
+
+
 	</RelativeLayout>
 	<GridView
 		android:id="@+id/id_gridView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_marginTop="40dip"
+		android:layout_marginTop="52.5dp"
 		android:cacheColorHint="@android:color/transparent"
 		android:clipChildren="true"
 		android:gravity="center"
-		android:horizontalSpacing="3dip"
 		android:listSelector="@android:color/transparent"
-		android:numColumns="4"
+		android:numColumns="3"
 		android:stretchMode="columnWidth"
-		android:paddingTop="2dp"
-		android:layout_marginBottom="40dip"
-		android:layout_marginLeft="2dp"
-		android:layout_marginRight="2dp"
+		android:layout_marginBottom="52.5dp"
+		android:layout_marginLeft="10dp"
+		android:layout_marginRight="10dp"
 		android:background="#ffffff"
-		android:verticalSpacing="3dip" >
+		android:horizontalSpacing="10dp"
+		android:scrollbars="none">
 	</GridView>
 	<RelativeLayout
 		android:id="@+id/id_bottom_ly"
 		android:layout_width="match_parent"
-		android:layout_height="40dip"
+		android:layout_height="50dp"
 		android:layout_alignParentBottom="true"
-		android:background="#454545"
+		android:background="#4d68dd"
 		android:clickable="true" >
 		<TextView
-			android:id="@+id/id_choose_dir"
-			android:layout_width="wrap_content"
-			android:layout_height="match_parent"
-			android:layout_alignParentLeft="true"
-			android:layout_centerVertical="true"
-			android:gravity="center_vertical"
-			android:text="切换相册"
-			android:paddingLeft="10dip"
-			android:textColor="@android:color/white" />
-		<RelativeLayout
-			android:id="@+id/rl_choose_dir"
-			android:layout_height="40dip"
-			android:layout_width="100dip"
-			android:layout_alignParentLeft="true"
-			></RelativeLayout>
-		<ImageView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="17dp"
-			android:layout_toRightOf="@+id/id_choose_dir"
-			android:paddingLeft="2dip"
-			android:src="@drawable/jiaobiao" />
-		<TextView
 			android:id="@+id/id_total_count"
-			android:layout_width="50dip"
+			android:layout_width="50dp"
+			android:layout_height="match_parent"
+			android:layout_alignParentLeft="true"
+			android:layout_centerVertical="true"
+			android:layout_marginLeft="10dp"
+			android:gravity="center"
+			android:textColor="@android:color/white"
+			android:text="预览"
+			android:textSize="14dp"
+			android:paddingLeft="10dp"
+			android:paddingRight="10dp"/>
+
+
+		<TextView
+			android:id="@+id/tv_ok"
+			android:layout_width="wrap_content"
 			android:layout_height="match_parent"
 			android:layout_alignParentRight="true"
 			android:layout_centerVertical="true"
-			android:layout_marginRight="10dip"
 			android:gravity="center"
-			android:textColor="@android:color/white" />
-		<RelativeLayout
-			android:id="@+id/rl_total_count"
-			android:layout_height="40dip"
-			android:layout_width="60dip"
-			android:layout_alignParentRight="true"
-			></RelativeLayout>
+			android:layout_marginTop="10dp"
+			android:paddingLeft="10dp"
+			android:paddingRight="10dp"
+			android:layout_marginRight="10dp"
+			android:text="确定"
+			android:textColor="@android:color/white"
+			android:textSize="14dp" />
+
 	</RelativeLayout>
 </RelativeLayout>
