--- a/src/android/layout/chooseimage_yulan.xml
+++ b/src/android/layout/chooseimage_yulan.xml
@@ -6,7 +6,7 @@
 	<RelativeLayout
 		android:id="@+id/id_top_ly"
 		android:layout_width="match_parent"
-		android:layout_height="40dp"
+		android:layout_height="50dp"
 		android:layout_alignParentTop="true"
 		android:background="#454545"
 		android:clickable="true" >
@@ -15,13 +15,13 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="10dip"
-			android:layout_marginTop="10dp"
+			android:layout_marginTop="15dip"
 			android:background="@drawable/array_left"
-			android:textColor="#fff" />
+			android:textColor="#fff"/>
 		<RelativeLayout
 			android:id="@+id/rl_back"
 			android:layout_width="50dp"
-			android:layout_height="40dp"
+			android:layout_height="50dp"
 			android:layout_alignParentLeft="true" >
 		</RelativeLayout>
 		<TextView
@@ -32,21 +32,9 @@
 			android:layout_centerVertical="true"
 			android:gravity="center_vertical"
 			android:text="预览照片"
-			android:textColor="#fff" />
-		<Button
-			android:id="@+id/btn_ok"
-			android:layout_width="wrap_content"
-			android:layout_height="match_parent"
-			android:layout_alignParentRight="true"
-			android:layout_marginRight="10dip"
-			android:layout_marginTop="7dp"
-			android:layout_marginBottom="7dp"
-			android:background="@drawable/shape_corner"
-			android:paddingLeft="6dp"
-			android:paddingRight="6dp"
-			android:text="完成"
-			android:textSize="17dp"
-			android:textColor="#000" />
+			android:textColor="#fff"
+			android:textSize="16sp"/>
+
 	</RelativeLayout>
 	<android.support.v4.view.ViewPager
 		android:id="@+id/viewPager"
@@ -66,9 +54,9 @@
 	<!-- 底部 -->
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="101dp"
+		android:layout_height="120dp"
 		android:layout_alignParentBottom="true"
-		android:background="#cc000000"
+		android:background="#cc414141"
 		android:orientation="vertical" >
 		<com.youbanban.cordova.chooseimages.imageloader.HorizontalListView
 			android:id="@+id/horizon_listview"
@@ -78,39 +66,48 @@
 		</com.youbanban.cordova.chooseimages.imageloader.HorizontalListView>
 		<RelativeLayout
 			android:layout_width="match_parent"
-			android:layout_height="1dp"
+			android:layout_height="50dp"
 			android:cacheColorHint="#00000000"
-			android:background="#66656b" />
-		<RelativeLayout
-			android:layout_width="match_parent"
-			android:layout_height="30dp"
-			android:cacheColorHint="#00000000"
-			android:orientation="horizontal" >
+			android:orientation="horizontal"
+			android:background="#cc4d68dd"
+			android:gravity="center"
+			android:layout_alignParentBottom="true">
 			<TextView
 				android:id="@+id/tv_xuanze"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignParentRight="true"
-				android:layout_marginRight="8dp"
-				android:layout_marginTop="3dp"
-				android:text="选择"
-				android:textSize="17dp"
-				android:textColor="#fff" />
-			<ImageView
-				android:id="@+id/img_xuanze"
-				android:layout_width="20dp"
-				android:layout_height="20dp"
-				android:layout_marginRight="3dp"
-				android:layout_marginTop="5dp"
-				android:layout_toLeftOf="@+id/tv_xuanze"
-				android:src="@drawable/pictures_selected" />
+				android:layout_width="50dp"
+				android:layout_height="match_parent"
+				android:layout_alignParentLeft="true"
+				android:layout_centerVertical="true"
+				android:layout_marginLeft="10dp"
+				android:gravity="center"
+				android:textColor="@android:color/white"
+				android:text="删除"
+				android:textSize="14dp"
+				android:paddingLeft="10dp"
+				android:paddingRight="10dp"
+				android:layout_marginBottom="10dp"/>
 			<RelativeLayout
 				android:id="@+id/rl_delete"
 				android:layout_width="80dp"
-				android:layout_height="30dp"
-				android:layout_alignParentRight="true"
+				android:layout_height="50dp"
+				android:layout_alignParentLeft="true"
 				android:alpha="100" >
 			</RelativeLayout>
+			<TextView
+				android:id="@+id/tv_ok"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:layout_alignParentRight="true"
+				android:layout_centerVertical="true"
+				android:gravity="center"
+				android:paddingLeft="10dp"
+				android:paddingRight="10dp"
+				android:layout_marginRight="10dp"
+				android:text="确定"
+				android:textColor="@android:color/white"
+				android:textSize="14dp"
+				android:layout_marginBottom="10dp"/>
+
 		</RelativeLayout>
 	</LinearLayout>
 </RelativeLayout>
